# MiNET_AI

./: Cargo.toml  README.md  best_network.dot  example.dot  minet_test.dot  player0.dot  prisoner1.dot
.github/: FUNDING.yml
src/: lib.rs  main.rs  minet_activation.rs  minet_display.rs  minet_encoding.rs  minet_random.rs
